style.css
/* ... */
/*******************Smartphones************************************/ 

@media all and (max-width: 768px) {
    .header{
        width: 100%;
        margin-left: 0%;
        margin-right: 0%;
        padding: 0%;
    }

    .menu ul{
    padding-inline-start: 0px;
    width: 100%;
    margin: 0%;
    }   
    .menu { 
        flex-direction: column;
        align-items: center;
        margin: 2%;
    }
    .menu_item{
        width: 100%;
    }
    #pic_logo{
        width: auto;
    }
    .menu a{
        margin-left: 0px;
        margin-right: 0px;
    }

    .menu a:hover{
        border-top: none;
        border-bottom: solid #0065FC;  
    }
    
    /***** section recherche mobile*/
    #Recherche{
        margin: 4%;
    }

    .titre_section {
        width: 80%;
    }
    .titre_section_recherche h2 {
        font-size: 19px;
    }
    .titre_section_recherche h6{
        font-size: 14px;
        margin-left: -1%;
    }

    #form_standart{
        display: none;
    }
        
    #form_mobile{
        display: flex;
        visibility: visible;
        width: 100%;
    }
    #Recherche form{
        align-self: center;
        margin-top: 2%;
        margin-bottom: 5%;
    }
    .text_form{
        font-size: 16px;
    }
    .filtres_recherche h4{
        margin-top: 5%;
        margin-bottom: 0%;
    }
    .filtres{
        margin-left: 0%;
    }
    .filtre{
        margin-right: 2%;
        margin-bottom: 2%;
    }
    .info_recherche {
        width: 80%;
    }
    .info_recherche h6{
        font-size: 12px;
    }
    .info_recherche i{
        float: left;
    }
    /* section hébergements mobile */

    #Hébergements{
        flex-direction: column;
        width: 100%;
        padding: 0%;
    }

    #HM{
        order: 2;
        display: flex;
        flex-direction: column;
        width: 89%;
        margin: 3%;
        padding: 0px;
        background-color: white;
    }
    .grille_hébergements{
        display: flex;
        flex-direction: column;
        margin-left: 0px ;
        align-self: center;   
        width: 100%; 
    }
    .grille_hébergements a{
        width: 100%;
        margin-left: 0%;
        margin-right: 0%;
    }
    .grille_item{
        width: 100%;
    }
    .grille_item img{
        width: 97%;
        object-position: 10% 53%;
    }
    .pic_item{
        width: 96%;
        padding: 2%;
    }
    .grille_item img{
        width: 100%;
        margin-top: 0%;
        height: 111px;
    }

    #button_more{
        align-self: flex-start;
    }
    #Pop{
        order: 1;
        display: flex;
        width: 100%;
        padding: 5%;
        margin-left: 0px;
        background-color: #F2F2F2;
        border-radius: 0px;
    }
    .titre_section_avec_icone{
        width: 80%;
    }
    #Pop a{
        width: 83%;
    }
    #grille_pop{
        display: flex;
        flex-wrap: wrap;
        flex-direction: column;
        width: 100%;
        align-self: center;
    }
    
    /* section Activités mobile*/

    .grille_activités{
        flex-direction: column;
    }
    .Item_grid{
        flex-wrap: nowrap;
        width: 100%;
    }
    .lien_card{
        width: 97%;
    }
    .pic_item_act{
        width: 100%;
    }
    
    .pic_item_act img{
        width: 100%;
    }
    #Vieux_port img{
        height: 111px;
    }
    #Parc_National_des_Calanques img{
        height: 111px;
    }
    #Fort_de_Pomègues img {
        height: 111px;
    }
    #Îles_du_Frioul img{
        height: 111px;
    }
    #Notre_Dame_de_la_Garde img{
        height: 111px;
    }
    #Parc_Longchamps img {
        height: 111px;
    }
    /*footer mobile*/
    .footer {
        margin-left: 0px !important;
        margin-right: 0px !important;

    }
    .foot_container { 
        flex-direction: column;
        flex-wrap: wrap;
        width: 100%;
        margin: 0%;
    }
    .foot_list{
        margin-bottom: 10%;
    }
    .foot_list ul {
        flex-direction: column;
        flex-wrap: wrap; 
        width: 80%;
        margin: 0px;
    }
    .foot_list li{
        padding: 1%;
    }

    .foot_list li:first-child{
        margin-bottom: 0%;
    }
}

